2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Mode_DS__c.field-meta.xml
<CustomField>
    <fullName>Mode_DS__c</fullName>
    <description>Mode for DS rate reply</description>
    <label>Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loose Loaded 20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 45&apos; FCL</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 40&apos; HC</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 45&apos; HC</fullName>
            </value>
            <value>
                <fullName>Liftvan Loaded via LCL</fullName>
            </value>
            <value>
                <fullName>Air Freight</fullName>
            </value>
            <value>
                <fullName>Overland by Truck</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 20&apos; + 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 20&apos; + LCL</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 40&apos; + LCL</fullName>
            </value>
            <value>
                <fullName>Loose loaded 20FCL Groupage</fullName>
            </value>
            <value>
                <fullName>Loose loaded 40FCL Groupage</fullName>
            </value>
            <value>
                <fullName>Loose Loaded 2 X 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>LIftvan Loaded in 1 x 20 FCL</fullName>
            </value>
            <value>
                <fullName>LIftvan Loaded in 1 x 40 FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>