2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Mode_OS__c.field-meta.xml
<CustomField>
    <fullName>Mode_OS__c</fullName>
    <description>Mode for OS rate reply</description>
    <label>Mode OS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airvan / Triwall packed</fullName>
            </value>
            <value>
                <fullName>Liftvan loaded via LCL</fullName>
            </value>
            <value>
                <fullName>20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>20&apos; + 20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>20&apos; + 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40&apos; + 40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40 HC</fullName>
            </value>
            <value>
                <fullName>Door to Port</fullName>
            </value>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>Overland by Truck</fullName>
            </value>
            <value>
                <fullName>Origin services only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>