2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <defaultValue>&quot;Please note that most houses/villas/apartments in Singapore have very poor unloading and road access and hence, shuttle service is usually required&quot;</defaultValue>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>