2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Notify_Party__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party__c</fullName>
    <defaultValue>&quot;As consignee&quot;</defaultValue>
    <label>Notify Party</label>
    <length>100</length>
    <type>Text</type>
</CustomField>