2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Notify_Party_Diplomatic__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party_Diplomatic__c</fullName>
    <defaultValue>&quot;Helu-Trans (S) Pte Ltd&quot; &amp; BR() &amp;
&quot;Tel: (65) 6225 5448&quot; &amp; BR() &amp;
&quot;Fax: (65) 6273 2282&quot;</defaultValue>
    <label>Notify Party (Diplomatic)</label>
    <type>TextArea</type>
</CustomField>