2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Ocean_Freight__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight__c</fullName>
    <defaultValue>&quot;- The freight is subject to changes:&quot; &amp; BR() &amp;
&quot;- BAF, Suez Surcharge, Piracy Risk Surcharge, Peak Season Surcharge are subjected to changes by the carriers without prior notice&quot; &amp; BR() &amp;
&quot;- Subject to all additional surcharges applicable at the time of shipment&quot; &amp; BR() &amp;
&quot;- Subject to carrier’s space availability&quot; &amp; BR() &amp;
&quot;- Above ocean freight is not applicable for Freight Collect arrangement&quot;</defaultValue>
    <label>Ocean Freight</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>