2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/ODestination_Services__c.field-meta.xml
<CustomField>
    <fullName>ODestination_Services__c</fullName>
    <label>Destination Services</label>
    <type>TextArea</type>
</CustomField>