2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/ODestination_THC__c.field-meta.xml
<CustomField>
    <fullName>ODestination_THC__c</fullName>
    <label>Destination THC</label>
    <type>TextArea</type>
</CustomField>