2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/OPiano_Handling__c.field-meta.xml
<CustomField>
    <fullName>OPiano_Handling__c</fullName>
    <label>Piano Handling</label>
    <type>TextArea</type>
</CustomField>