2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Origin_Services__c.field-meta.xml
<CustomField>
    <fullName>Origin_Services__c</fullName>
    <defaultValue>&quot;US$ 38.00 / 100 lbs min 4000 lbs / 20&apos;&quot; &amp; BR() &amp;
&quot;US$ 38.00 /  100 lbs min 8000 lbs / 40&apos;&quot; &amp; BR() &amp;
&quot;US$ 70.00 / 100 lbs min 1000 lbs&quot; &amp; BR() &amp;
&quot;US$ 3.50 / cft net min $400.00&quot; &amp; BR() &amp;
&quot;Note: Shuttling 3rd party &amp; other additional local ancillary services rendered here will be subjected to GST 7%.&quot; &amp; BR() &amp;  &quot;Private apartments here require non refundable fees for lift usage of approx US$ 15.00 - 50.00 which we will invoice back at costs with supporting receipts.&quot;</defaultValue>
    <label>Origin Services</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>