2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Origin_THC__c.field-meta.xml
<CustomField>
    <fullName>Origin_THC__c</fullName>
    <defaultValue>&quot;1) US$ 0.20 per chargeable kg minimum US$ 100.00 per shipment&quot; &amp; BR() &amp; 
&quot;2) US$ 400.00 per 20’&quot;</defaultValue>
    <description>THC charges for OS</description>
    <label>Origin THC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>