2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Other_Charges_Air__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Air__c</fullName>
    <defaultValue>&quot;- Destination airport THC (additional at US$ 0.20 per kg airway bill chargeable)Minimum US$ 100.00 per shipment&quot; &amp; BR() &amp;
&quot;- Customs clearance (included)&quot;</defaultValue>
    <label>Other Charges (Air)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>