2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Other_Charges_Diplomatic__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Diplomatic__c</fullName>
    <defaultValue>&quot;- Destination THC (included)&quot; &amp; BR() &amp;
&quot;- Shuttle Service (included)&quot; &amp; BR() &amp;
&quot;- Customs clearance (included)&quot; &amp; BR() &amp;
&quot;- Handyman service (included for the first 2 hours. Thereafter @ US$ 50.00 per additional hour)&quot;</defaultValue>
    <label>Other Charges (Diplomatic)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>