2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Other_Charges_FCL__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_FCL__c</fullName>
    <defaultValue>&quot;- Customs clearance (included)&quot; &amp; BR() &amp;
&quot;- If temporary storage is required, storage charges will apply as per rates indicated under “Additional Charges” &quot; &amp; BR() &amp;
&quot;- Warehouse handling charge will apply as per rates indicated under “Additional Charges” &quot; &amp; BR() &amp;
&quot;- Re-delivery charge from warehouse to residence (waived)&quot;</defaultValue>
    <label>Other Charges (FCL)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>