2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Other_Charges_LCL__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_LCL__c</fullName>
    <defaultValue>&quot;- Destination CFS/LCL/NVOCC (to be invoiced at cost)&quot; &amp; BR() &amp;
&quot;(This type of charges vary depending on which NVOCC/Forwarder you use for this shipment. Estimate at US$ 100.00 per cbm gross)&quot; &amp; BR() &amp;
&quot;- Customs clearance (included)&quot;</defaultValue>
    <label>Other Charges (LCL)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>