2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Pack_date__c.field-meta.xml
<CustomField>
    <fullName>Pack_date__c</fullName>
    <label>Pack date</label>
    <type>Date</type>
</CustomField>