2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&quot;Our company policy allows us to only grant credit to FIDI/OMNI agents.&quot; &amp; BR() &amp; 
&quot;Unless otherwise agreed we must insist  on payment before arrival of the shipment, either by payment in advance or by a certified cheque, to be sent by courier or be enclosed with shipping documents.&quot; &amp; BR() &amp; 
&quot;KINDLY NOTE THAT FOR ANY PAYMENTS MADE THROUGH INTER-BANK - ALL BANK TRANSFER FEES WILL BE BORNE BY THE REMITTER.&quot;</defaultValue>
    <label>Payment Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>