2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/POE__c.field-meta.xml
<CustomField>
    <fullName>POE__c</fullName>
    <label>POE</label>
    <length>150</length>
    <type>Text</type>
</CustomField>