2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Prohibited_Items__c.field-meta.xml
<CustomField>
    <fullName>Prohibited_Items__c</fullName>
    <defaultValue>&quot;- Chewing Gum&quot; &amp; BR() &amp;
&quot;- Chewing tobacco and imitation tobacco products&quot; &amp; BR() &amp;
&quot;- Cigarette lighters of pistol or revolver shape&quot; &amp; BR() &amp;
&quot;- Controlled drugs and psychotropic substances&quot; &amp; BR() &amp;
&quot;- Endangered species of wildlife and their by-products&quot; &amp; BR() &amp;
&quot;- Firecrackers, fireworks of explosive nature&quot; &amp; BR() &amp;
&quot;- Obscene articles, publications, video tapes/discs and software&quot; &amp; BR() &amp;
&quot;- Reproduction of copy right publications, video tapes,discs,records or cassettes&quot; &amp; BR() &amp;
&quot;- Seditious and treasonable materials&quot;</defaultValue>
    <label>Prohibited Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>