2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/quote_number__c.field-meta.xml
<CustomField>
    <fullName>quote_number__c</fullName>
    <externalId>true</externalId>
    <label>quote number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>