2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Quote_Reference2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reference2__c</fullName>
    <formula>quote_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Reference</label>
    <type>Text</type>
</CustomField>