2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Quote_Revision__c.field-meta.xml
<CustomField>
    <fullName>Quote_Revision__c</fullName>
    <inlineHelpText>Indicate the number of times the quotation is revised</inlineHelpText>
    <label>Quote Revision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>