2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Quote_USD__c.field-meta.xml
<CustomField>
    <fullName>Quote_USD__c</fullName>
    <label>Quote (USD)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>