2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Quote_Validity_days__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_days__c</fullName>
    <defaultValue>&quot;60&quot;</defaultValue>
    <description>Number of days quote is valid</description>
    <inlineHelpText>Number of days quote is valid</inlineHelpText>
    <label>Quote Validity (days)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>