2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Quoted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Amount__c</fullName>
    <formula>Quote_USD__c + Quote_2_USD__c + Quote_3_USD__c + Quote_4_USD__c + Quote_5_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>