2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/QuoteUSD__c.field-meta.xml
<CustomField>
    <fullName>QuoteUSD__c</fullName>
    <label>Rate (USD)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>