2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Rate2__c.field-meta.xml
<CustomField>
    <fullName>Rate2__c</fullName>
    <label>Rate 2 (USD)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>