2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <label>Shipper</label>
    <length>40</length>
    <type>Text</type>
</CustomField>