2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Shuttle_Service_DS__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Service_DS__c</fullName>
    <description>Shuttle service for DS</description>
    <label>Shuttle Service DS</label>
    <type>TextArea</type>
</CustomField>