2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Shuttle_Service_OS__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Service_OS__c</fullName>
    <defaultValue>&quot;US$ 250.00 / 20&apos;&quot; &amp; BR() &amp; 
&quot;US$ 300.00 / 40&apos;&quot;</defaultValue>
    <description>Shuttle service for OS</description>
    <label>Shuttle Service OS</label>
    <type>TextArea</type>
</CustomField>