2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/SIT_Liftvan_Load_DS__c.field-meta.xml
<CustomField>
    <fullName>SIT_Liftvan_Load_DS__c</fullName>
    <defaultValue>&quot;US$ 6.50 / 100 lbs net / month (min 1000 lbs)&quot;</defaultValue>
    <label>SIT - Liftvan Load DS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>