2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/SIT_Liftvan_Load_OS__c.field-meta.xml
<CustomField>
    <fullName>SIT_Liftvan_Load_OS__c</fullName>
    <defaultValue>&quot;US$ 6.50 / 100 lbs net (min 1000 lbs)&quot;</defaultValue>
    <description>SIT liftvan load for OS</description>
    <label>SIT - Liftvan Load OS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>