2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/SIT_Loose_Load_DS__c.field-meta.xml
<CustomField>
    <fullName>SIT_Loose_Load_DS__c</fullName>
    <defaultValue>&quot;US$ 8.00 / 100 lbs net (min 1000 lbs net)&quot;</defaultValue>
    <description>SIT Loose Load for DS</description>
    <label>SIT - Loose Load DS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>