2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/SIT_Loose_Load_OS__c.field-meta.xml
<CustomField>
    <fullName>SIT_Loose_Load_OS__c</fullName>
    <defaultValue>&quot;US$ 8.00 / 100 lbs net (min 1000 lbs net)&quot;</defaultValue>
    <label>SIT - Loose Load OS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>