2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Stair_Carry_Long_Carry__c.field-meta.xml
<CustomField>
    <fullName>Stair_Carry_Long_Carry__c</fullName>
    <defaultValue>&quot;US$ 300.00 lumpsum (min $100.00 / shipment)&quot;</defaultValue>
    <label>Stair Carry / Long Carry</label>
    <length>250</length>
    <type>Text</type>
</CustomField>