2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Transportation_Haulage__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Haulage__c</fullName>
    <defaultValue>&quot;US$ 350.00  / 20&apos;&quot;</defaultValue>
    <label>Transportation / Haulage</label>
    <type>TextArea</type>
</CustomField>