2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Unit_3__c.field-meta.xml
<CustomField>
    <fullName>Unit_3__c</fullName>
    <label>Unit 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cbm</fullName>
            </value>
            <value>
                <fullName>cuft</fullName>
            </value>
            <value>
                <fullName>lbs</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>