2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Valid_til__c.field-meta.xml
<CustomField>
    <fullName>Valid_til__c</fullName>
    <formula>Date__c  + Validity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid til</label>
    <type>Date</type>
</CustomField>