2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Valid_until__c.field-meta.xml
<CustomField>
    <fullName>Valid_until__c</fullName>
    <description>All quotes are valid until this date</description>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>