2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity (days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>