2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Volume_4__c.field-meta.xml
<CustomField>
    <fullName>Volume_4__c</fullName>
    <label>Volume 4</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>