2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>