2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/WH_Liftvan_Load__c.field-meta.xml
<CustomField>
    <fullName>WH_Liftvan_Load__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>WH (in/out) - Liftvan Load</label>
    <length>50</length>
    <type>Text</type>
</CustomField>