2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/WH_Loose_Load__c.field-meta.xml
<CustomField>
    <fullName>WH_Loose_Load__c</fullName>
    <defaultValue>&quot;US$ 5.00 / 100 lbs net (min 1000 lbs)**&quot;</defaultValue>
    <label>WH (in/out) - Loose Load</label>
    <length>50</length>
    <type>Text</type>
</CustomField>