2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/recordTypes/DS_Air_Shipment.recordType-meta.xml
<RecordType>
    <fullName>DS_Air_Shipment</fullName>
    <active>true</active>
    <description>Destination Services for Air Shipment</description>
    <label>DS Air Shipment</label>
</RecordType>