2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/recordTypes/DS_Diplomatic_Shipment.recordType-meta.xml
<RecordType>
    <fullName>DS_Diplomatic_Shipment</fullName>
    <active>true</active>
    <description>Destination Services for Diplomatic Shipment</description>
    <label>DS Diplomatic Shipment</label>
</RecordType>