2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/recordTypes/DS_FCL.recordType-meta.xml
<RecordType>
    <fullName>DS_FCL</fullName>
    <active>true</active>
    <description>Destination Services for FCL Shipment</description>
    <label>DS FCL</label>
</RecordType>