2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/recordTypes/DS_LCL.recordType-meta.xml
<RecordType>
    <fullName>DS_LCL</fullName>
    <active>true</active>
    <description>Destination Services for LCL Shipment</description>
    <label>DS LCL</label>
</RecordType>