2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/recordTypes/Origin_Service.recordType-meta.xml
<RecordType>
    <fullName>Origin_Service</fullName>
    <active>true</active>
    <description>Rate reply for origin services</description>
    <label>Origin Service</label>
</RecordType>