2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/validationRules/Initials_Uppercase.validationRule-meta.xml
<ValidationRule>
    <fullName>Initials_Uppercase</fullName>
    <active>true</active>
    <description>Initials to be uppercase</description>
    <errorConditionFormula>IF (UPPER( Initials__c ) = Initials__c, false,true)</errorConditionFormula>
    <errorDisplayField>Initials__c</errorDisplayField>
    <errorMessage>Initials must be in UPPER CASE.</errorMessage>
</ValidationRule>